--- a/src/package.xml
+++ b/src/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>CourseController</members>
+        <members>CourseHelper</members>
         <members>CourseImporter</members>
         <members>EmailManager</members>
         <members>LoginController</members>
